[gd_scene load_steps=10 format=2]

[ext_resource path="res://menuButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Font/Xolonium-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://bgLast.PNG" type="Texture" id=3]
[ext_resource path="res://WIN.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=5]
size = 72
outline_color = Color( 0.670588, 0.109804, 0.109804, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Font/Xolonium-Bold.ttf"

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://Font/Xolonium-Bold.ttf"

[sub_resource type="DynamicFont" id=7]
size = 20
font_data = SubResource( 4 )

[node name="Control" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.07
anchor_bottom = 1.0
margin_right = 1751.0
margin_bottom = 1029.0
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 3 )
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 311.151
margin_top = 224.136
margin_right = 730.151
margin_bottom = 434.136
custom_fonts/font = SubResource( 5 )
text = "YOU WIN
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quitButton" parent="." instance=ExtResource( 1 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 317.0
margin_top = 336.0
margin_right = 431.0
margin_bottom = 361.0
focus_neighbour_top = NodePath("../startButton")
focus_neighbour_bottom = NodePath("../startButton")
custom_colors/font_color_focus = Color( 0.0509804, 0.431373, 0.376471, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.0509804, 0.431373, 0.376471, 1 )
custom_fonts/font = SubResource( 6 )
text = "Quit"

[node name="startButton" parent="." instance=ExtResource( 1 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 518.0
margin_top = 336.0
margin_right = 632.0
margin_bottom = 361.0
focus_neighbour_top = NodePath("../quitButton")
focus_neighbour_bottom = NodePath("../quitButton")
custom_colors/font_color_focus = Color( 0.0509804, 0.431373, 0.376471, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.0509804, 0.431373, 0.376471, 1 )
custom_fonts/font = SubResource( 7 )
text = "Play Again"

[connection signal="pressed" from="quitButton" to="." method="_on_quitButton_pressed"]
[connection signal="pressed" from="startButton" to="." method="_on_startButton_pressed"]
